# United-Outdoors

./: .gitignore  README.md  pyproject.toml
data/raw/: aenc.laccdb
python/: SelectOrderDetails.ipynb  aenc.accdb  aenc.laccdb  cluster.ipynb  customer_tables.ipynb  dataInlijst.ipynb  datetable.ipynb  employee copy.ipynb  employee.ipynb  productTable.ipynb  streamlit_test.ipynb  test.ipynb
python/ML/: classificatie.ipynb  frequent_itemsets.ipynb  linear_regression.ipynb
raw-databases/: aenc.accdb  aenc.laccdb
src/: Dashboard.py  main.py  processing.py  settings.py  web.py
src/templates/: index.html  pie.html
