[tool.poetry]
name = "united-outdoors"
version = "0.1.0"
description = ""
authors = ["Xavier8L <shenglongchen99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
